# hhh-main

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
.github/: PROJECT_BOARD.md  labels.yml
.github/instructions/: bug-history.instructions.md  copilot.instructions.md  gh-workflow.instructions.md
.github/workflows/: auto-unblock.yml  ci.yml  pr-title.yml  sync-labels.yml  sync-submodules.yml
hhh-commodities-service/: .gitignore  Dockerfile  README.md  pyproject.toml
hhh-commodities-service/.github/instructions/: copilot.instructions.md
hhh-commodities-service/.github/workflows/: pr-title.yml
hhh-commodities-service/src/: main.py  seed.py
hhh-commodities-service/src/application/services/: commodity_service.py
hhh-commodities-service/src/domain/exceptions/: commodity_not_found_error.py
hhh-commodities-service/tests/: conftest.py
hhh-commodities-service/tests/unit/: test_api_mapper.py  test_commodity_exception.py  test_commodity_model.py  test_commodity_mongo_repository.py  test_commodity_service.py  test_main.py  test_persistence_mapper.py  test_router.py  test_seed.py
hhh-events/: README.md  pyproject.toml
hhh-events/hhh_events/: __init__.py  indexes.py  publisher.py  schemas.py  subscriber.py
hhh-events/tests/integration/: conftest.py  test_round_trip.py
hhh-events/tests/unit/: test_indexes.py  test_publisher.py  test_schemas.py  test_subscriber.py
hhh_cli/: __init__.py
scripts/: setup.ps1  setup.sh
tests/smoke/: conftest.py  test_smoke.py
(+10 files in other folders)
